# social-triangulation

./: .gitignore  README.md
code/: .hcbuild  Cargo.toml
code/src/: lib.rs  members.rs  setting.rs  vouch.rs
example-dna/: alice.keystore  app.json  bob.keystore  conductor-config.toml  config.nix  tom.keystore
example-dna/test/: index.js  package-lock.json
ui/: package-lock.json  package.json  rollup.config.ts
ui/demo/: index.html  index.js  package-lock.json
ui/src/: bindings.ts  hc-social-triangulation.ts  social-triangulation.module.ts  types.ts
ui/src/elements/: hcst-agent-list.ts
ui/src/graphql/: queries.ts  resolvers.ts  schema.ts
zomes/social-triangulation/: zome.json
zomes/social-triangulation/code/src/: lib.rs  vouch.rs
