[package]
name = "social-triangulation"
version = "0.1.0"
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"

[dependencies]
serde_derive = "=1.0"
serde = "1.0.89"
serde_json = { version = "1.0.39", features = ["preserve_order"] }
hdk = "~0.0.42-alpha5"
hdk_proc_macros = "~0.0.42-alpha5"
holochain_json_derive = "0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
