[package]
name = "social-triangulation"
version = "0.1.0"
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"

[dependencies]
serde_derive = "=1.0"
serde = "1.0.104"
serde_json = { version = "1.0.47", features = ["preserve_order"] }
hdk = "~0.0.49-alpha1"
hdk_proc_macros = "~0.0.49-alpha1"
holochain_entry_utils = "0.1.3"
holochain_json_derive = "0.0.23"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
